--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <link href="/static/style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <h1>test</h1>
+    <h1>test1</h1>
   </body>
 </html>
