--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <h1>here</h1>
+    <a href="#" class="neon-button">Neon</a>
   </body>
 </html>
